Fixed build for jdk 17